fix link, fix syntax

--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <title>js-tasks6</title>
-  <link rel = "stylesheet" type = "text/css" href = "css/main.css">
-  <meta charset=utf-8>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <table id = "tableWithDiagonal">
+  <table id="table-with-diagonal">
     <tr>
       <td>1:1</td>
       <td>1:2</td>
@@ -128,12 +129,12 @@
       <td>10:10</td>
     </tr>
   </table>
-  <p id='textToPaint'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute - irure dolor in reprehenderit in voluptate velit esse! Sed ut perspiciatis?</p>
+  <p id="text-to-paint">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute - irure dolor in reprehenderit in voluptate velit esse! Sed ut perspiciatis?</p>
   <p>
   <a id="w3r" type="text/html" hreflang="en-us" rel="nofollow" target="_self" href="http://www.w3resource.com/">w3resource</a>
   </p>
-  <button onclick = "getAttributes()">Click here to get  attributes value</button>
-  <div id="BlockId"></div>
+  <button onclick="getAttributes()">Click here to get  attributes value</button>
+  <div id="block-id"></div>
   <script src = "js/getAttributes.js" defer></script>
   <script src = "js/paintDiagonal.js" defer></script>
   <script src = "js/createSpanInBlockById.js" defer></script>
